# graphblast

./: .gitignore  .gitmodules  CMakeLists.txt  Figure1a-spmm-4.sh  Figure1and4.sh  Figure1b.sh  Figure1spmv.sh  Figure5a.sh  Figure5b.sh  Figure6.sh  Figure7.sh  Figure7_genmatrix.sh  HPEC_BoF.pptx  LICENSE  Makefile  README.md  bar.sh  benchmark.sh  common.mk  debug.sh  gbtl.sh  gen_matrix.cpp  graphblas.cpp  graphblas.hpp  oval_benchmark.sh  run.sh  run2.sh  run_bfs.sh  run_cc.sh  run_gc.sh  run_pr.sh  run_sssp.sh  run_tc.sh  scratch.cpp  sweeprow.sh  task.txt  test.c  test.cpp
Minutes/: 0106graphblas.txt  0120graphblas.txt  0122graphblas.txt  0203graphblas.txt  0219graphblas.txt  1216grahpblas.txt
algorithms/: bfs.hpp
data/gc-data/: Makefile
data/gc-data/ASIC_320ks/: Makefile
data/gc-data/FEM_3D_thermal2/: Makefile
data/gc-data/G3_circuit/: Makefile
data/gc-data/af_shell3/: Makefile
data/gc-data/apache2/: Makefile
data/gc-data/atmosmodd/: Makefile
data/gc-data/cage13/: Makefile
data/gc-data/ecology2/: Makefile
data/gc-data/offshore/: Makefile
data/gc-data/parabolic_fem/: Makefile
data/gc-data/thermal2/: Makefile
data/gc-data/thermomech_dK/: Makefile
data/large/: Makefile
data/small/: chesapeake.mtx  chesapeake_trace.mtx  small.mtx  test_cc.mtx  test_mis.mtx  test_pr.mtx  test_sgm.mtx  test_spgemm.mtx
dataset/europar/large/: DownloadFigure6.sh  ExtractFigure6.sh
dataset/europar/lowd/: Makefile
dataset/highd/: Makefile
dataset/highd/F1/: Makefile
dataset/highd/StocF-1465/: Makefile
dataset/highd/bmw3_2/: Makefile
dataset/highd/bmwcra_1/: Makefile
dataset/highd/boneS10/: Makefile
dataset/highd/inline_1/: Makefile
dataset/large/: Makefile
dataset/large/consph/: Makefile
dataset/large/hood/: Makefile
dataset/large/kron_g500-logn20/: Makefile
dataset/large/mc2depi/: Makefile
dataset/large/mouse_gene/: Makefile
dataset/large/pdb1HYS/: Makefile
dataset/large/pwtk/: Makefile
dataset/lowd/ASIC_320k/: Makefile
dataset/lowd/FullChip/: Makefile
dataset/lowd/c-big/: Makefile
dataset/lowd/circuit5M/: Makefile
dataset/lowd/ins2/: Makefile
dataset/lowd/neos3/: Makefile
dataset/lowd/wheel_601/: Makefile
dataset/small/: simulated_blockmodel_graph_100_nodes.mtx  simulated_blockmodel_graph_50_nodes.mtx  test_bc.mtx  test_cc.mtx  test_dc.mtx  test_mesh.mtx
docs/: env_var.md
example/: gbfs.cu  gbfs_simple.cu  gcc.cu  gdiameter.cu  ggc.cu  ggc_cusparse.cu  glgc.cu  gmis.cu  gpr.cu  gsssp.cu  gsssp_simple.cu  gtc.cu
graphblas/: BinaryOp.hpp  Descriptor.hpp  Matrix.hpp  Monoid.hpp  Semiring.hpp  UnaryOp.hpp  Vector.hpp  backend.hpp  descriptor.hpp  dimension.hpp  graphblas.hpp  matrix.hpp  mmio.cpp  mmio.hpp  mxm.hpp  mxv.hpp  operations.hpp  stddef.hpp  types.hpp  util.hpp  vector.hpp
graphblas/algorithm/: .cc.hpp.swp  .pr.hpp.swp  bfs.hpp  bfsSimple.hpp  bfs_simple.hpp  cc.hpp  common.hpp  diameter.hpp  gc.hpp  gcSimple.hpp  lgc.hpp  lgcSimple.hpp  lgc_simple.hpp  mis.hpp  pr.hpp  sssp.hpp  ssspSimple.hpp  sssp_simple.hpp  tc.hpp  testBfs.hpp  testGc.hpp  testLgc.hpp  testSssp.hpp  test_bfs.hpp  test_cc.hpp  test_gc.hpp  test_lgc.hpp  test_mis.hpp  test_pr.hpp  test_sssp.hpp  test_tc.hpp
graphblas/backend/apspie/: .DenseVector.hpp.swp  .Matrix.hpp.swp  .SparseMatrix.hpp.swp  .operations.hpp.swp  .spmspvInner.hpp.swp  BinaryOp.hpp  CooMatrix.hpp  DenseMatrix.hpp  DenseVector.hpp  Descriptor.hpp  Matrix.hpp  Monoid.hpp  Semiring.hpp  SparseMatrix.hpp  SparseVector.hpp  UnaryOp.hpp  Vector.hpp  apspie.hpp  assign.hpp  eWiseAdd.hpp  eWiseMult.hpp  gemm.hpp  gemv.hpp  mxm.hpp  mxm2.hpp  mxv.hpp  operations.hpp  reduce.hpp  script.sh  spgemm.hpp  spmm.hpp  spmspv.hpp  spmspvInner.hpp  spmv.hpp  trace.hpp  transpose.hpp  types.hpp  util.hpp
graphblas/backend/cuda/: .dense_vector.hpp.swp  .spmv.hpp.swp  DenseMatrix.hpp  DenseVector.hpp  Descriptor.hpp  Matrix.hpp  SparseMatrix.hpp  SparseVector.hpp  UnaryOp.hpp  Vector.hpp  apply.hpp  assign.hpp  color.hpp  cuda.hpp  dense_matrix.hpp  dense_vector.hpp  descriptor.hpp  eWiseAdd.hpp  eWiseMult.hpp  ewiseadd.hpp  ewisemult.hpp  gather.hpp  gemm.hpp  gemv.hpp  matrix.hpp  operations.hpp  reduce.hpp  scatter.hpp  sparse_matrix.hpp  sparse_vector.hpp  spgemm.hpp  spmm.hpp  spmspv.hpp  spmspvInner.hpp  spmspv_inner.hpp  spmv.hpp  trace.hpp  transpose.hpp  tri.hpp  types.hpp  (+2 more)
graphblas/backend/sequential/: CooMatrix.hpp  DenseMatrix.hpp  Descriptor.hpp  Matrix.hpp  SparseMatrix.hpp  mxm.hpp  (+6 more)
graphblas/graph/: bfs.hpp  testBfs.hpp
practice/: Course.cpp  Course.h  Student.cpp  Student.h  TestStudent.cpp  TestStudent.h
result/: bargraph  denserow  features_all  features_all2  fullrun  gpullbench-stats  kron-unvisited-stats  kron-unvisited-stats-spmspv  pullbenchmark  pullbenchmark-keyvalue-earlyexit  pullbenchmark-struconly-earlyexit  pullbenchmark-struconly-noearlyexit  pushbenchmark-keyvalue  pushbenchmark-struconly  soc-lj-1  soc-lj-1ns  soc-lj-2  spmm  spmm.ods  spmm128.ods  spmm64  spmm64.ods  spmm64_2dblock  spmm64_all  spmm64_all2  spmm64_latest  spmm64_latest.ods  spmm_coalesce  spmm_mergecoalesce  spmm_mergecoalesce_bench2  spmm_schema  spmspvbenchmark-keyvalue  spmspvbenchmark-struconly  spmv  spmv.ods  spmv_schema  spmvbenchmark  sweepdense  sweepdense_2  sweepdense_spmv  (+2 more)
scripts/: lint.py
src/: Matrix.hpp  backend.hpp  graphblas.hpp  types.hpp
test/: CMakeLists.txt  FindMKL.cmake  bspgemm.cpp  dense.cpp  gassign.cu  gbdense.cu  gbdensecusparse2.cu  gbfs.cu  gbfs2.cu  gbgemm.cu  gbinaryop.cu  gbmatrix.cu  gbspgemm.cu  gbspmm.cu  gbspmv.cu  gbuild.cu  gdensevector.cu  gdescriptor.cu  gewiseadd.cu  gewisemult.cu  glgc.cu  gmatrix.cu  gmmio.cu  gpull.cu  gpullbench.cu  gpush.cu  gpushbench.cu  grandbfs.cu  greduce.cu  gsparsematrix.cu  gsparsevector.cu  gspgemm.cu  gspmm.cu  gspmspv.cu  gspmspvbench.cu  gspmv.cu  gspmvbench.cu  gtrace.cu  gutil.cu  gvector.cu  (+15 more)
test/benchmark/: main.cu
test/benchmark_spgemm/: main.cpp  main.cu  test
test/benchmark_spmm/: main.cu
test/matrix/: main.cpp  main.cu
test/mmio/: main.cpp  main.cu
test/spmm/: main.cpp  main.cu
(+35 files in other folders)
